# primitivas-graficas

./: CMakeLists.txt  cohen_sutherland_algorithm.c  cohen_sutherland_algorithm.h  drawing_algorithms.c  drawing_algorithms.h  drawing_utils.c  drawing_utils.h  main.c  main_utils.c  main_utils.h  midpoint_line_algorithm.c  midpoint_line_algorithm.h  scanline_fill_algorithm.c  scanline_fill_algorithm.h  sdl_utils.c  sdl_utils.h
